--- a/iDecide4u/de.lproj/Main.strings
+++ b/iDecide4u/de.lproj/Main.strings
@@ -10,3 +10,6 @@
 
 /* Class = "UIButton"; normalTitle = "Save new item!"; ObjectID = "op5-rD-z3j"; */
 "op5-rD-z3j.normalTitle" = "Option speichern!";
+
+/* Class = "UITextField"; normalTitle = "Save new item!"; ObjectID = "oMC-BU-pKD"; */
+"oMC-BU-pKD.placeholder" = "Neue Option hinzufügen";
