IDFY-100: Localise missing story board label.

--- a/iDecide4u/de.lproj/Main.strings
+++ b/iDecide4u/de.lproj/Main.strings
@@ -13,3 +13,6 @@
 
 /* Class = "UITextField"; normalTitle = "Save new item!"; ObjectID = "oMC-BU-pKD"; */
 "oMC-BU-pKD.placeholder" = "Neue Option hinzufügen";
+
+/* Title of list operation scene */
+"4RS-cc-9tE.title" = "Listenverwaltung";
